welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: not found: value précédent
		if (T(j)=précédent) {
                         ^