welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
var T = new Array[Int](num+1)
T(0)=0
T(1)=1
T(2)=2
for (i<-3 to num) {
	val precedent:Int=T(i-1)
	var nb:Int=0
	val qtite:Int=T(T(i-1))
	for (j<-0 to i-1) {
		if (T(j)=précédent) {
			nb=nb+1
		}
	}
	if (nb==qtite) {
		T(i)=precedent+1
	} else {
		T(i)=precedent
	}
	}
	return T(num)
}
